[package]
name = "distorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
windows = { version = "0.43.0", features = ["Win32_System_TaskScheduler", "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole"] }
chrono = "0.4.22"